# enrichment-api/docs/swagger.json
@@ -10,7 +10,7 @@
     "basePath": "/",
     "paths": {
         "/enrichment": {
-            "post": {
+            "get": {
                 "description": "Get address, pii and suggestions for a customer",
                 "consumes": [
                     "application/json"
@@ -21,13 +21,11 @@
                 "summary": "Enrich customer data",
                 "parameters": [
                     {
+                        "type": "string",
                         "description": "Customer Code",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.EnrichmentRequest"
-                        }
+                        "name": "customer_code",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -62,19 +60,14 @@
                 }
             }
         },
-        "models.EnrichmentRequest": {
-            "type": "object",
-            "properties": {
-                "customer_code": {
-                    "type": "string"
-                }
-            }
-        },
         "models.EnrichmentResponse": {
             "type": "object",
             "properties": {
                 "address": {
                     "$ref": "#/definitions/models.Address"
+                },
+                "metadata": {
+                    "$ref": "#/definitions/models.Metadata"
                 },
                 "pii": {
                     "$ref": "#/definitions/models.Pii"
@@ -84,6 +77,14 @@
                     "items": {
                         "$ref": "#/definitions/models.Suggestion"
                     }
+                }
+            }
+        },
+        "models.Metadata": {
+            "type": "object",
+            "properties": {
+                "processing_time": {
+                    "type": "string"
                 }
             }
         },
