# suggestion-api/models/suggestion.go
@@ -4,7 +4,3 @@ type Suggestion struct {
 	Name      string `json:"name"`
 	Promotion string `json:"promotion"`
 }
-
-type SuggestionRequest struct {
-	CustomerCode string `json:"customer_code"`
-}
